Some more post-merge fixes
Here are some of the "problematic" commits:

2c11166c2647ffd78e695c64583fb8cc3ff527a9 # Make submission_format
list-of-str column instead of relationship
397a7c01db7ff156d420a6c4f78f57d7c696f2a8 # Use cached task & score type
objects on dataset when possible
98503361e60ca389fe405e0b9891533d7868301e # Port ScoreTypes to Jinja2
0903503bc3496a16febd9d9e25cece9fe145de99 # Move all of BaseImporter
content (all static methods) to a module
67803e17aad412bf22be6c767684ce7b46d04260 # Todo: see if we can reuse
some of the new import logic
ef3a78c31f7648bee5dcd4258deb12c613ff7649 # Store
User.preferred_languages as ARRAY(String)
c13d7cf160d73822c03477f1a68b2cc2c8f805a2 # Store Task.primary_statements
as ARRAY(String)
73ff2b8a88420dc578acac36e48826d63ffad5ed # Make prompts properly
b130936db8c84d355a19d62dc77d836760e21409 # Store score details as JSONB
or ARRAY(String)
50af9257510be7010a80c9c219968ed10f44e7fc # Port CWS to Jinja2: replace
comprehensions with "pipelines"

--- a/cms/server/admin/templates/group.html
+++ b/cms/server/admin/templates/group.html
@@ -28,10 +28,10 @@
         <td>{{ p.user.first_name }}</td>
         <td>{{ p.user.last_name }}</td>
       </tr>
-      {% end %}
+      {% endfor %}
     </tbody>
   </table>
-  {% end %}
+  {% endif %}
 
   <div class="hr"></div>
 </div>
@@ -114,4 +114,4 @@
   <div class="hr"></div>
 </div>
 
-{% end %}
+{% endblock group %}
