--- a/cms/server/taskoverview/templates/overview.html
+++ b/cms/server/taskoverview/templates/overview.html
@@ -166,7 +166,7 @@
                                         {% raw TaskInfo.desc()[key] %}
                                         </label>
                                     </div>
-                                {% end %}
+                                {% endfor %}
                                 </div>
 
                                 <div>
@@ -177,7 +177,7 @@
                                         {% raw TaskInfo.desc()[key] %}
                                         </label>
                                     </div>
-                                {% end %}
+                                {% endfor %}
                                 </div>
                             </div>
                         </div>
