--- a/cms/server/admin/templates/contest.html
+++ b/cms/server/admin/templates/contest.html
@@ -190,19 +190,15 @@
         <span class="info" title="The group used for time calculations in the admin and ranking interface."></span>
         Main group
       </td>
-      <td><input type="text" name="start" value="{{ contest.start }}"></td>
-    </tr>
-    <tr>
       <td>
         <select name="main_group_id">
     {% for g in contest.groups %}
-          <option value="{{ g.id }}" {% if contest.main_group_id == g.id %}selected{% end %}>
+          <option value="{{ g.id }}" {% if contest.main_group_id == g.id %}selected{% endif %}>
             {{ g.name }}
           </option>
-    {% end %}
+    {% endfor %}
         </select>
       </td>
-      <td><input type="text" name="stop" value="{{ contest.stop }}"></td>
     </tr>
     <tr>
       <td>
@@ -211,15 +207,6 @@
         Timezone
       </td>
       <td><input type="text" name="timezone" value="{{ contest.timezone if contest.timezone is not none else "" }}"></td>
-    </tr>
-    <tr>
-      <td>
-        <span class="info" title="Length of the contest (in seconds) for each contestant.
-                                  If not specified, each contestant can submit solutions for the whole duration of the contest.
-                                  If specified, only up to this length after the first log in (or up to the end of the contest, whichever comes first)."></span>
-        Length of the contest
-      </td>
-      <td><input type="text" name="per_user_time" value="{{ contest.per_user_time.total_seconds()|int if contest.per_user_time is not none else "" }}"></td>
     </tr>
 
     <tr><td colspan=2><h2>Limits</h2></td></tr>
@@ -254,32 +241,6 @@
         Minimum interval between user tests
       </td>
       <td><input type="text" name="min_user_test_interval" value="{{ contest.min_user_test_interval.total_seconds()|int if contest.min_user_test_interval is not none else "" }}"></td>
-    </tr>
-    <tr><td colspan=2><h2>Analysis mode</h2></td></tr>
-    <tr>
-      <td>
-        <span class="info" title="If true, analysis mode for this contest will be enabled."></span>
-        Enabled
-      </td>
-      <td>
-        <input type="checkbox" id="analysis_enabled" name="analysis_enabled" {{ "checked" if contest.analysis_enabled else "" }}/>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <span class="info" title="Start time of the analysis mode in the UTC timezone.
-                                  Example: '2015-12-31 15:00:00'."></span>
-        Analysis mode start time (in UTC)
-      </td>
-      <td><input type="text" name="analysis_start" value="{{ contest.analysis_start }}"></td>
-    </tr>
-    <tr>
-      <td>
-        <span class="info" title="End time of the analysis mode in the UTC timezone.
-                                  Example: '2015-12-31 18:00:00'."></span>
-        Analysis mode end time (in UTC)
-      </td>
-      <td><input type="text" name="analysis_stop" value="{{ contest.analysis_stop }}"></td>
     </tr>
   </table>
   <input type="submit"
