--- a/cms/server/admin/templates/contest_users.html
+++ b/cms/server/admin/templates/contest_users.html
@@ -24,7 +24,7 @@
     <option value="{{ g.id }}">
       {{ g.name }}
     </option>
-    {% end %}
+    {% endfor %}
   </select>
   <input type="submit"
 {% if not admin.permission_all %}
@@ -54,14 +54,14 @@
       </tr>
     </thead>
     <tbody>
-      {% for u in contest.participations|map(attribute="user")|sort(attribute="username") %}
+      {% for u in contest.participations|sort(attribute="user.username") %}
       <tr>
         <td>
-          <input type="radio" name="user_id" value="{{ u.id }}"/>
+          <input type="radio" name="user_id" value="{{ u.user.id }}"/>
         </td>
-        <td><a href="{{ url("contest", contest.id, "user", u.id, "edit") }}">{{ u.username }}</a></td>
-        <td>{{ u.first_name }}</td>
-        <td>{{ u.last_name }}</td>
+        <td><a href="{{ url("contest", contest.id, "user", u.user.id, "edit") }}">{{ u.user.username }}</a></td>
+        <td>{{ u.user.first_name }}</td>
+        <td>{{ u.user.last_name }}</td>
         <td>{{ u.group.name }}</td>
       </tr>
       {% endfor %}
