--- a/cms/server/admin/templates/groups.html
+++ b/cms/server/admin/templates/groups.html
@@ -12,7 +12,7 @@
   <input type="submit"
 {% if not current_user.permission_all %}
          disabled
-{% end %}
+{% endif %}
          value="Add group" />
 </form>
 
@@ -24,7 +24,7 @@
          value="Remove from contest"
 {% if not current_user.permission_all %}
          disabled
-{% end %}
+{% endif %}
          />
   <table class="bordered">
     <thead>
@@ -53,9 +53,9 @@
         <td>{{ str(g.analysis_start) }}</td>
         <td>{{ str(g.analysis_stop) }}</td>
       </tr>
-      {% end %}
+      {% endfor %}
     </tbody>
   </table>
 </form>
 
-{% end %}
+{% endblock core %}
