--- a/cms/server/contest/templates/contest.html
+++ b/cms/server/contest/templates/contest.html
@@ -30,9 +30,9 @@ var utils = new CMS.CWSUtils("{{ url() }}", "{{ contest_url() }}", "{{ contest.n
                              {{ current_phase_begin|make_timestamp }},
                              {{ current_phase_end|make_timestamp }},
                              {{ actual_phase }});
-    utils.update_time({% if current_user.group.per_user_time is not none %}true{% else %}false{% endif %});
+    utils.update_time({% if participation.group.per_user_time is not none %}true{% else %}false{% endif %});
     setInterval(function() {
-        utils.update_time({% if current_user.group.per_user_time is not none %}true{% else %}false{% endif %});
+        utils.update_time({% if participation.group.per_user_time is not none %}true{% else %}false{% endif %});
     }, 1000);
     utils.update_unread_count(0{% if page == "communication" %}, 0{% endif %});
     utils.update_notifications(true);
