--- a/cms/server/contest/templates/contest_list.html
+++ b/cms/server/contest/templates/contest_list.html
@@ -8,7 +8,7 @@
         <ul class="nav nav-list">
     {% for c_name, c_iter in contest_list|dictsort(by="key") %}
             <li>
-                <a {% if c_iter.stop < now %} style="color: #adadad" {% endif %} href="{{ url(c_iter.name) }}">{{ c_iter.description }}</a>
+                <a {% if c_iter.main_group.stop < now %} style="color: #adadad" {% endif %} href="{{ url(c_iter.name) }}">{{ c_iter.description }}</a>
             </li>
     {% endfor %}
         </ul>
