--- a/cms/server/contest/templates/overview.html
+++ b/cms/server/contest/templates/overview.html
@@ -19,29 +19,29 @@
         {% trans %}The contest hasn't started yet.{% endtrans %}
         </p>
         <p>
-        {% trans start_time=(contest.start + participation.delay_time)|format_datetime_smart,
-                 stop_time=(contest.stop + participation.delay_time + participation.extra_time)|format_datetime_smart %}
+        {% trans start_time=(participation.group.start + participation.delay_time)|format_datetime_smart,
+                 stop_time=(participation.group.stop + participation.delay_time + participation.extra_time)|format_datetime_smart %}
           The contest will start at {{ start_time }} and will end at {{ stop_time }}.
         {% endtrans %}
 {% elif phase == 0 %}
         {% trans %}The contest is currently running.{% endtrans %}
         </p>
         <p>
-        {% trans start_time=(contest.start + participation.delay_time)|format_datetime_smart,
-                 stop_time=(contest.stop + participation.delay_time + participation.extra_time)|format_datetime_smart %}
+        {% trans start_time=(participation.group.start + participation.delay_time)|format_datetime_smart,
+                 stop_time=(participation.group.stop + participation.delay_time + participation.extra_time)|format_datetime_smart %}
           The contest started at {{ start_time }} and will end at {{ stop_time }}.
         {% endtrans %}
 {% elif phase >= +1 %}
         {% trans %}The contest has already ended.{% endtrans %}
         </p>
         <p>
-        {% trans start_time=(contest.start + participation.delay_time)|format_datetime_smart,
-                 stop_time=(contest.stop + participation.delay_time + participation.extra_time)|format_datetime_smart %}
+        {% trans start_time=(participation.group.start + participation.delay_time)|format_datetime_smart,
+                 stop_time=(participation.group.stop + participation.delay_time + participation.extra_time)|format_datetime_smart %}
           The contest started at {{ start_time }} and ended at {{ stop_time }}.
         {% endtrans %}
 {% endif %}
         </p>
-{% if current_user.group.analysis_enabled %}
+{% if participation.group.analysis_enabled %}
         <p>
   {% if phase == +1 %}
         {% trans %}The analysis mode hasn't started yet.{% endtrans %}
@@ -131,7 +131,7 @@
 {% endif %}
 
     </div>
-{% if current_user.group.per_user_time is not none %}
+{% if participation.group.per_user_time is not none %}
     <div class="span4">
         <div class="well per_user_time">
             <p>
@@ -147,16 +147,16 @@
         {% trans %}By clicking on the button below you can start your time frame.{% endtrans %}
         {% trans %}Once you start, you can submit solutions until the end of the time frame or until the end of the contest, whatever comes first.{% endtrans %}
     {% elif actual_phase == 0 %}
-        {% trans start_time=participation.starting_time|format_datetime_smart %}You started your time frame at {{ start_time }}.{% endtrans %}
+        {% trans start_time=participation.group.starting_time|format_datetime_smart %}You started your time frame at {{ start_time }}.{% endtrans %}
         {% trans %}You can submit solutions until the end of the time frame or until the end of the contest, whatever comes first.{% endtrans %}
     {% elif actual_phase == +1 %}
-        {% trans start_time=participation.starting_time|format_datetime_smart %}You started your time frame at {{ start_time }} and you already finished it.{% endtrans %}
+        {% trans start_time=participation.group.starting_time|format_datetime_smart %}You started your time frame at {{ start_time }} and you already finished it.{% endtrans %}
         {% trans %}There's nothing you can do now.{% endtrans %}
     {% elif actual_phase == +2 %}
-        {% if participation.starting_time is none %}
+        {% if participation.group.starting_time is none %}
             {% trans %}You never started your time frame. Now it's too late.{% endtrans %}
         {% else %}
-            {% trans start_time=participation.starting_time|format_datetime_smart %}You started your time frame at {{ start_time }} and you already finished it.{% endtrans %}
+            {% trans start_time=participation.group.starting_time|format_datetime_smart %}You started your time frame at {{ start_time }} and you already finished it.{% endtrans %}
         {% endif %}
         {% trans %}There's nothing you can do now.{% endtrans %}
     {% endif %}
