--- a/cms/server/admin/templates/task.html
+++ b/cms/server/admin/templates/task.html
@@ -122,6 +122,27 @@ $("select[name=task_type_{{ dataset.id }}]").change(function() {
       </tr>
       <tr>
         <td>
+          <span class="info" title="Addenda for this task. In analysis mode, contestant can view and download addenda from the task page."></span>
+          Addenda
+{% if admin.permission_all %}
+          [<a href="{{ url("task", task.id, "addenda", "add") }}">add</a>]
+{% endif %}
+        </td>
+        <td>
+          {% if task.addenda|length == 0 %}
+            No addenda.
+          {% else %}
+            {% for addendum in itervalues(task.addenda) %}
+              <div class="addendum">
+                <a href="{{ url("file", addendum.digest, addendum.filename) }}">{{ addendum.filename }}</a>
+                - <a onclick="CMS.AWSUtils.ajax_delete('{{ url("task", task.id, "addendum", addendum.id) }}'); ">Delete</a>
+              </div>
+            {% endfor %}
+          {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td>
           <span class="info" title="A comma-separated list with the names of the files that need to be submitted (with the language extensions changed to %l).
                                     The task type dictates the submission format. Consult the task type documentation to know the requirements."></span>
           Submission format
