--- a/cms/server/contest/static/cws_style.css
+++ b/cms/server/contest/static/cws_style.css
@@ -790,7 +790,7 @@ th.short {
 
 /*** Attachments */
 
-#attachments ul {
+.attachments ul {
     margin-left: 0;
     list-style-type: none;
     -webkit-column-count: 3;
@@ -801,7 +801,7 @@ th.short {
     column-gap: 8px;
 }
 
-#attachments ul li {
+.attachments ul li {
     -webkit-column-break-inside: avoid;
     -webkit-break-inside: avoid;
     -moz-break-inside: avoid;
@@ -810,14 +810,14 @@ th.short {
 
 /* this is a really ugly hack to simulate the no-break behavior on firefox */
 @-moz-document url-prefix() {
-    #attachments ul li {
+    .attachments ul li {
         display: table;
         table-layout: fixed;
         width: 100%;
     }
 }
 
-#attachments ul li a {
+.attachments ul li a {
     display: block;
     height: 36px;
     margin-bottom: 8px;
@@ -825,22 +825,22 @@ th.short {
     text-align: left;
 }
 
-#attachments ul li a:hover {
+.attachments ul li a:hover {
     background-color: #E3E3E3;
 }
 
-#attachments ul li img {
+.attachments ul li img {
     float: left;
     margin: 2px 8px 2px 2px;
 }
 
-#attachments ul li .first_line {
+.attachments ul li .first_line {
     display: block;
     height: 18px;
     overflow: hidden;
 }
 
-#attachments ul li .name {
+.attachments ul li .name {
     display: inline-block;
     max-width: 100%;
     overflow: hidden;
@@ -849,7 +849,7 @@ th.short {
     font-weight: bold;
 }
 
-#attachments ul li .size {
+.attachments ul li .size {
     float: right;
     font-style: italic;
     /* the size floats on right of the first line if there's enough space.
@@ -857,7 +857,7 @@ th.short {
        "disappearing" because the first line has overflow: hidden */
 }
 
-#attachments ul li .type {
+.attachments ul li .type {
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
