--- a/cms/server/admin/templates/add_addendum.html
+++ b/cms/server/admin/templates/add_addendum.html
@@ -2,11 +2,11 @@
 
 {% block core %}
 <div class="core_title">
-  <h1><a href="{{ url("task", task.id) }}">{{ task.title }} ({{ task.name }})</a> - Upload addendum</h1>
+  <h1><a href="{{ url("task", task.id) }}">{{ task.title }} ({{ task.name }})</a> - Upload spoiler</h1>
 </div>
-<form enctype="multipart/form-data" action="{{ url("task", task.id, "addenda", "add") }}" method="POST">
+<form enctype="multipart/form-data" action="{{ url("task", task.id, "spoilers", "add") }}" method="POST">
   {{ xsrf_form_html|safe }}
-  <input type="file" name="addendum"/><br/>
+  <input type="file" name="spoiler"/><br/>
   <input type="submit" value="Upload">
   <input type="Reset" >
 </form>
