--- a/cms/server/admin/templates/task.html
+++ b/cms/server/admin/templates/task.html
@@ -122,20 +122,20 @@ $("select[name=task_type_{{ dataset.id }}]").change(function() {
       </tr>
       <tr>
         <td>
-          <span class="info" title="Addenda for this task. In analysis mode, contestant can view and download addenda from the task page."></span>
-          Addenda
+          <span class="info" title="Spoilers for this task. In analysis mode, contestant can view and download spoilers from the task page."></span>
+          Analysis Spoilers
 {% if admin.permission_all %}
-          [<a href="{{ url("task", task.id, "addenda", "add") }}">add</a>]
+          [<a href="{{ url("task", task.id, "spoilers", "add") }}">add</a>]
 {% endif %}
         </td>
         <td>
-          {% if task.addenda|length == 0 %}
-            No addenda.
+          {% if task.spoilers|length == 0 %}
+            No spoilers.
           {% else %}
-            {% for addendum in itervalues(task.addenda) %}
-              <div class="addendum">
-                <a href="{{ url("file", addendum.digest, addendum.filename) }}">{{ addendum.filename }}</a>
-                - <a onclick="CMS.AWSUtils.ajax_delete('{{ url("task", task.id, "addendum", addendum.id) }}'); ">Delete</a>
+            {% for spoiler in itervalues(task.spoilers) %}
+              <div class="spoiler">
+                <a href="{{ url("file", spoiler.digest, spoiler.filename) }}">{{ spoiler.filename }}</a>
+                - <a onclick="CMS.AWSUtils.ajax_delete('{{ url("task", task.id, "spoiler", spoiler.id) }}'); ">Delete</a>
               </div>
             {% endfor %}
           {% endif %}
