--- a/cms/server/contest/templates/overview.html
+++ b/cms/server/contest/templates/overview.html
@@ -13,7 +13,7 @@
 
 <h2>{% trans %}General information{% endtrans %}</h2>
 <div class="row">
-    <div class="{% if contest.per_user_time is not none %}span5{% else %}span9{% endif %}">
+    <div class="{% if participation.group.per_user_time is not none %}span5{% else %}span9{% endif %}">
         <p>
 {% if phase == -1 %}
         {% trans %}The contest hasn't started yet.{% endtrans %}
@@ -136,7 +136,7 @@
         <div class="well per_user_time">
             <p>
         {# TODO would be very nice to write something like "just for 3 consecutive hours"... #}
-        {% trans per_user_time=contest.per_user_time|format_timedelta %}Every user is allowed to compete (i.e. submit solutions) for a uninterrupted time frame of {{ per_user_time }}.{% endtrans %}
+        {% trans per_user_time=participation.group.per_user_time|format_timedelta %}Every user is allowed to compete (i.e. submit solutions) for a uninterrupted time frame of {{ per_user_time }}.{% endtrans %}
             </p>
 
             <p>
